--- a/person_functions/package.json
+++ b/person_functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sudhanshu-is-a-good-boy",
+  "name": "person_functions",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
