--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
+    "csv-parser": "^3.2.0",
     "jquery-csv": "^1.0.40"
-  }
+  },
+  "name": "wmad",
+  "description": "Repo of learning react In class of Web and Mobile application development",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
